--- a/package.json
+++ b/package.json
@@ -4,33 +4,42 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "export NODE_ENV=development&&webpack serve --open",
-    "dev": "export NODE_ENV=development&&webpack",
-    "build": "export NODE_ENV=production&&webpack",
+    "start": "webpack serve --open",
+    "dev": "webpack",
+    "build": "webpack --node-env=production",
     "clear": "rd /s /q dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-env": "^7.23.5",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
     "babel-loader": "^9.1.3",
-    "cross-env": "^7.0.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "group-css-media-queries-loader": "^4.3.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
-    "postcss-preset-env": "^9.3.0",
-    "sass": "^1.69.5",
+    "postcss-preset-env": "^9.2.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.69.4",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "normalize.css": "^8.0.1"
   }
 }
